한국어 번역 진행

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="%PUBLIC_URL%/static/fonts_1/icomoon.css">
-    <title>成绩查询</title>
+    <title>성적 조회</title>
 </head>
 <body>
     <div id="root"></div>
