--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/assets/fonts/icomoon.css" />
-    <title>成绩查询</title>
+    <title>성적 조회</title>
   </head>
   <body>
     <app-root></app-root>
